update : create read delete project platform with translation
